--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <p><a href="https://www.linkedin.com/in/eddie-joe-antonio-301b75180/">Eddie Joe Antonio</a></p>
+    <p class="links"><a href="https://eddiejoe-antonio.github.io/mesh-viz/">mesh</a></p>
+    <p class="links"><a href="https://eddiejoe-antonio.github.io/dailysketch-viz/">daily sketch</a></p>
 </body>
 </html>
