updated styles etc

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Eddie Joe Antonio</title>
 </head>
 <body>
-    <p class="title"><a href="https://www.linkedin.com/in/eddie-joe-antonio-301b75180/">Eddie Joe Antonio</a></p>
-    <p class="links"><a href="https://eddiejoe-antonio.github.io/mesh-viz/">mesh</a></p>
-    <p class="links"><a href="https://eddiejoe-antonio.github.io/dailysketch-viz/">daily sketch</a></p>
+    <p><a class="title" href="https://www.linkedin.com/in/eddie-joe-antonio-301b75180/">Eddie Joe Antonio</a></p>
+    <br>
+    <a href="https://eddiejoe-antonio.github.io/mesh-viz/">mesh</a>
+    <a href="https://eddiejoe-antonio.github.io/dailysketch-viz/">daily sketch</a>
+    <a href="https://artifact-essay-eddiejoe.glitch.me/">artifacts</a>
 </body>
 </html>
