--- a/about.html
+++ b/about.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" type="image/png" href="data/background.svg"/>
-    <title>Eddie Joe Antonio</title>
+    <title>Eddie Joe Antonio | About</title>
 </head>
 <body>
     <!--<p><a class="title" href="https://www.linkedin.com/in/eddie-joe-antonio-301b75180/">Eddie Joe Antonio</a></p>-->
-    <p>Eddie Joe Antonio</p>
+    <p>about me</p>
     <br>
-    <a href="about.html">about</a>
+    <a href="index.html">Eddie Joe Antonio</a>
     <a href="https://eddiejoe-antonio.github.io/mesh-viz/">mesh</a>
     <a href="https://eddiejoe-antonio.github.io/dailysketch-viz/">daily sketch</a>
     <a href="https://artifact-essay-eddiejoe.glitch.me/">artifacts</a>
