--- a/about.html
+++ b/about.html
@@ -8,12 +8,14 @@
     <title>Eddie Joe Antonio | About</title>
 </head>
 <body>
-    <!--<p><a class="title" href="https://www.linkedin.com/in/eddie-joe-antonio-301b75180/">Eddie Joe Antonio</a></p>-->
-    <p>about me</p>
+    <h1><a class="title" href="index.html">Eddie Joe Antonio</a></h1>
+    <!--<h1>Eddie Joe Antonio</h1>-->
     <br>
-    <a href="index.html">Eddie Joe Antonio</a>
-    <a href="https://eddiejoe-antonio.github.io/mesh-viz/">mesh</a>
-    <a href="https://eddiejoe-antonio.github.io/dailysketch-viz/">daily sketch</a>
-    <a href="https://artifact-essay-eddiejoe.glitch.me/">artifacts</a>
+    <br>
+    <!--NAV Bar-->
+    <a class="links" href="about.html">about</a>
+    <a class="links" href="https://eddiejoe-antonio.github.io/mesh-viz/">mesh</a>
+    <a class="links" href="https://eddiejoe-antonio.github.io/dailysketch-viz/">daily sketch</a>
+    <a class="links" href="https://artifact-essay-eddiejoe.glitch.me/">artifacts</a>
 </body>
 </html>
