--- a/about.html
+++ b/about.html
@@ -17,5 +17,7 @@
     <a class="links" href="https://eddiejoe-antonio.github.io/mesh-viz/">mesh</a>
     <a class="links" href="https://eddiejoe-antonio.github.io/dailysketch-viz/">daily sketch</a>
     <a class="links" href="https://artifact-essay-eddiejoe.glitch.me/">artifacts</a>
+
+    <p>I am a student, turned furniture builder, turned landscape designer, and now moving towards front-end software developer. Please reach out!</p>
 </body>
 </html>
