--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <!--<p><a class="title" href="https://www.linkedin.com/in/eddie-joe-antonio-301b75180/">Eddie Joe Antonio</a></p>-->
     <h1><a class="title" href="index.html">Eddie Joe Antonio</a></h1>
     <!--<h1>Eddie Joe Antonio</h1>-->
-    <br>
-    <br>
+    <span class="responsive-spacing"></span>
     <!--NAV Bar-->
     <a class="links" href="about.html">about</a>
     <a class="links" href="https://eddiejoe-antonio.github.io/mesh-viz/">mesh</a>
