--- a/index.html
+++ b/index.html
@@ -13,10 +13,49 @@
     <h1><a class="title" href="index.html">Eddie Joe Antonio</a></h1>
     <!--<h1>Eddie Joe Antonio</h1>-->
     <span class="responsive-spacing"></span>
-    <!--NAV Bar-->
+
+
+    <!--NAV Bar A-->
+    <!--<div class="dropdown">
+        <button class="dropbtn">research</button>
+        <div class="dropdown-content">
+          <a href="#">NYC Mesh - A Data Visualization</a>
+          <a href="#">Parametric, Voter Driven Yard</a>
+          <a href="#">three</a>
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn">spatial</button>
+        <div class="dropdown-content">
+          <a href="#">NYC Mesh - A Data Visualization</a>
+          <a href="#">Parametric, Voter Driven Yard</a>
+          <a href="#">three</a>
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn">digital</button>
+        <div class="dropdown-content">
+          <a href="#">NYC Mesh - A Data Visualization</a>
+          <a href="#">Parametric, Voter Driven Yard</a>
+          <a href="#">three</a>
+        </div>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn">About</button>
+        <div class="dropdown-content">
+          <a href="#">NYC Mesh - A Data Visualization</a>
+          <a href="#">Parametric, Voter Driven Yard</a>
+          <a href="#">three</a>
+        </div>
+    </div>-->
+    <a class="links" href="research.html">research</a>
+    <a class="links" href="spatial.html">spatial</a>
+    <a class="links" href="digital.html">digital</a>
     <a class="links" href="about.html">about</a>
-    <a class="links" href="https://eddiejoe-antonio.github.io/mesh-viz/">mesh</a>
+
+    
+    <!--<a class="links" href="https://eddiejoe-antonio.github.io/mesh-viz/">mesh</a>
     <a class="links" href="https://eddiejoe-antonio.github.io/dailysketch-viz/">daily sketch</a>
-    <a class="links" href="https://artifact-essay-eddiejoe.glitch.me/">artifacts</a>
+    <a class="links" href="https://artifact-essay-eddiejoe.glitch.me/">artifacts</a>-->
 </body>
 </html>
