--- a/spatial.html
+++ b/spatial.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <link rel="icon" type="image/png" href="data/background.svg"/>
-    <title>Eddie Joe Antonio</title>
+    <title>Eddie Joe Antonio | About</title>
 </head>
 <body>
     <!--<p><a class="title" href="https://www.linkedin.com/in/eddie-joe-antonio-301b75180/">Eddie Joe Antonio</a></p>-->
@@ -21,8 +21,5 @@
     <a class="links" href="spatial.html">spatial</a>
     <a class="links" href="digital.html">digital</a>
     <a class="links" href="about.html">about</a>
-
-    <span class="responsive-spacing"></span>
-    <p class="about__text">Hi! I'm Eddie Joe Antonio, and I'm a designer, researcher, and digital + physical builder. I'm currently completing a Masters of Science in Computational Design Practices (MSCDP) at Columbia University, where I've trained in web development (front-end), mapmaking, generative design for spatial practices, and digital storytelling. <br><br>I love cities, biking, gardening, and jazz music.  </p>
 </body>
 </html>
