--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
     <a class="links" href="about.html">about</a>
 
     <span class="responsive-spacing"></span>
-    <p class="about__text">Hi! I'm Eddie Joe Antonio, and I'm a designer, researcher, and digital + physical builder. I'm currently completing a Masters of Science in Computational Design Practices (MSCDP) at Columbia University, where I've trained in web development (front-end), mapmaking, generative design for spatial practices, and digital storytelling. <br><br>I love cities, biking, gardening, and jazz music.  </p>
+    <p class="about__text">Hi! I'm Eddie Joe Antonio, and I'm a designer, researcher, and digital + physical builder. I'm currently completing a Masters of Science in Computational Design Practices (MSCDP) at Columbia University, where I've trained in web development (front-end), mapmaking, parametric design for architectural practices, and computational analysis. <br><br>I love cities, biking, gardening, and jazz music.  </p>
+    <p class="about__text">If you'd like to get in touch, I can be reached at: <a href="mailto:eddiejoe.antonio@gmail.com">eddiejoe [dot] antonio [at] gmail [dot] com</a></p>
 </body>
 </html>
