--- a/digital.html
+++ b/digital.html
@@ -22,6 +22,6 @@
     <a class="links" href="digital.html">digital</a>
     <a class="links" href="about.html">about</a>
 
-    <p>coming soon!</p>
+    <p class="placeholder__text">coming soon</p>
 </body>
 </html>
