--- a/research.html
+++ b/research.html
@@ -21,6 +21,10 @@
     <a class="links" href="spatial.html">spatial</a>
     <a class="links" href="digital.html">digital</a>
     <a class="links" href="about.html">about</a>
-    <p>coming soon!</p>
+    <p class="placeholder__text">coming soon</p>
+
+
+    <!--<img class="research__images" src="data/research/AntonioLu_GIS Final Report_Page_01.jpg">-->
+
 </body>
 </html>
