--- a/spatial.html
+++ b/spatial.html
@@ -21,7 +21,7 @@
     <a class="links" href="spatial.html">spatial</a>
     <a class="links" href="digital.html">digital</a>
     <a class="links" href="about.html">about</a>
-    <p>coming soon!</p>
+    <p class="placeholder__text">coming soon</p>
 
 </body>
 </html>
