--- a/research.html
+++ b/research.html
@@ -21,10 +21,24 @@
     <a class="links" href="spatial.html">spatial</a>
     <a class="links" href="digital.html">digital</a>
     <a class="links" href="about.html">about</a>
-    <p class="placeholder__text">coming soon</p>
 
+    <br>
+    <div class="project">
+        <p class="project__index">00</p>
+        <p class="project__header">Migrant Support Systems: Analyzing Select Destinations of Governor Abbott's Refugee Removal Program</p>
+        <div class="project__image">
+            <img src="data/research/dc_snippet.png">
+        </div>
+       <!--<p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
+            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
+            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
+            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
+            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
+            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
+        </p>-->
 
-    <!--<img class="research__images" src="data/research/AntonioLu_GIS Final Report_Page_01.jpg">-->
-
+    </div>
+    <br>
+    <br>
 </body>
 </html>
