--- a/research.html
+++ b/research.html
@@ -25,33 +25,20 @@
     <br>
     <div class="project">
         <p class="project__index">00</p>
-        <p class="project__header">Migrant Support Systems: Analyzing Select Destinations of Governor Abbott's Refugee Removal Program</p>
-        <div class="project__image">
-            <img src="data/research/dc_snippet.png">
-        </div>
-       <!--<p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-        </p>-->
-    </div>
-    <br>
-    <div class="project">
-        <p class="project__index">01</p>
         <p class="project__header"><a href="pages/research/migrantsupportsystems.html">Migrant Support Systems: Analyzing Select Destinations of Governor Abbott's Refugee Removal Program</a></p>
         <div class="project__image">
             <img src="data/research/dc_snippet.png">
         </div>
-       <!--<p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-        </p>-->
     </div>
+    <br>
+    <div class="project">
+        <p class="project__index">01</p>
+        <p class="project__header"><a href="pages/research/grasshopperparametric.html">Voter-Driven Parametric Design: Using Grasshopper to Build Consensus</a></p>
+        <div class="project__image">
+            <img src="data/research/312 Evergreen - Design.png">
+        </div>
+    </div>
+    <br>
     <br>
     <br>
 </body>
