updated styles and pages

--- a/digital.html
+++ b/digital.html
@@ -22,6 +22,13 @@
     <a class="links" href="digital.html">digital</a>
     <a class="links" href="about.html">about</a>
 
-    <p class="placeholder__text">coming soon</p>
+    <div class="project">
+        <p class="project__index">00</p>
+        <p class="project__header"><a class="project__links" href="pages/digital/dailysketch.html">Some Sketches, Digitized</a></p>
+        <div class="project__image">
+            <img src="data/digital/sketch.png">
+        </div>
+    </div>
+    <br>
 </body>
 </html>
