--- a/pages/research/grasshopperparametric.html
+++ b/pages/research/grasshopperparametric.html
@@ -36,7 +36,7 @@
             Read the full report <a href="../../data/research/files/AntonioLu_GIS Final Report.pdf">here.</a>
         </p>
         <div class="project__image">
-            <img src="../../data/research/312 Evergreen - Design.png">
+            <img src="../../data/research/312 Evergreen - Design.jpg">
         </div>
     </div>
 </body>
