--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
     <br>
     <div class="project">
         <p class="project__index">00</p>
-        <p class="project__header"><a href="pages/research/migrantsupportsystems.html">Migrant Support Systems: Analyzing Select Destinations of Governor Abbott's Refugee Removal Program</a></p>
+        <p class="project__header"><a class="project__links" href="pages/research/migrantsupportsystems.html">Migrant Support Systems: Analyzing Select Destinations of Governor Abbott's Refugee Removal Program</a></p>
         <div class="project__image">
             <img src="data/research/dc_snippet.png">
         </div>
@@ -33,9 +33,17 @@
     <br>
     <div class="project">
         <p class="project__index">01</p>
-        <p class="project__header"><a href="pages/research/grasshopperparametric.html">Voter-Driven Parametric Design: Using Grasshopper to Build Consensus</a></p>
+        <p class="project__header"><a class="project__links" href="pages/research/grasshopperparametric.html">Voter-Driven Parametric Design: Using Grasshopper to Build Consensus</a></p>
         <div class="project__image">
-            <img src="data/research/312 Evergreen - Design.png">
+            <img src="data/research/312 Evergreen - Design.jpg">
+        </div>
+    </div>
+    <br>
+    <div class="project">
+        <p class="project__index">02</p>
+        <p class="project__header"><a class="project__links" href="pages/research/buellcenter.html">Temple Hoyne Buell Center at Columbia University: Morningside</a></p>
+        <div class="project__image">
+            <img src="data/research/campus.gif">
         </div>
     </div>
     <br>
