--- a/digital.html
+++ b/digital.html
@@ -29,6 +29,13 @@
             <img src="data/digital/sketch.png">
         </div>
     </div>
+    <div class="project">
+        <p class="project__index">01</p>
+        <p class="project__header"><a class="project__links" href="pages/digital/mesh.html">NYC Mesh: An Exploratory Data Visualization</a></p>
+        <div class="project__image">
+            <img src="data/digital/meshviz.gif">
+        </div>
+    </div>
     <br>
 </body>
 </html>
