--- a/pages/digital/mesh.html
+++ b/pages/digital/mesh.html
@@ -24,8 +24,8 @@
     
     <br>
     <div class="project">
-        <p class="project__index">01</p>
-        <p class="project__header">Some Sketches, Digitized</p>
+        <p class="project__index">00</p>
+        <p class="project__header">NYC Mesh: An Exploratory Data Visualization</p>
         <p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
             This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
             This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
@@ -33,10 +33,10 @@
             This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
             <br>
             <br>
-            Explore the full set of images <a href="https://eddiejoe-antonio.github.io/dailysketch-viz/">here.</a>
+            The full site can be accessed <a href="https://eddiejoe-antonio.github.io/mesh-viz/">here.</a>
         </p>
         <div class="project__image">
-            <img src="../../data/digital/sketch.png">
+            <img src="../../data/digital/meshviz.gif">
         </div>
     </div>
 </body>
