--- a/research.html
+++ b/research.html
@@ -33,7 +33,7 @@
     <br>
     <div class="project">
         <p class="project__index">01</p>
-        <p class="project__header"><a class="project__links" href="pages/research/grasshopperparametric.html">Voter-Driven Parametric Design: Using Grasshopper to Build Consensus</a></p>
+        <p class="project__header"><a class="project__links" href="pages/research/grasshopperparametric.html">Voter-Driven Parametric Design</a></p>
         <div class="project__image">
             <img src="data/research/312 Evergreen - Design.jpg">
         </div>
@@ -41,7 +41,7 @@
     <br>
     <div class="project">
         <p class="project__index">02</p>
-        <p class="project__header"><a class="project__links" href="pages/research/buellcenter.html">Temple Hoyne Buell Center at Columbia University: Morningside</a></p>
+        <p class="project__header"><a class="project__links" href="pages/research/buellcenter.html">Buell Center at Columbia University: Morningside</a></p>
         <div class="project__image">
             <img src="data/research/campus.gif">
         </div>
