--- a/spatial.html
+++ b/spatial.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" type="image/png" href="data/background.svg"/>
+    <link rel="icon" type="image/png" href="data/identity/faviconb.png"/>
     <title>Eddie Joe Antonio | About</title>
 </head>
 <body>
@@ -21,7 +21,29 @@
     <a class="links" href="spatial.html">spatial</a>
     <a class="links" href="digital.html">digital</a>
     <a class="links" href="about.html">about</a>
-    <p class="placeholder__text">coming soon</p>
-
+    <div class="project">
+        <p class="project__index">00</p>
+        <p class="project__header"><a class="project__links" href="pages/digital/mesh.html">Marsha P. Johnson State Park</a></p>
+        <div class="project__image">
+            <img src="data/digital/meshviz.gif">
+        </div>
+    </div>
+    <br>
+    <div class="project">
+        <p class="project__index">01</p>
+        <p class="project__header"><a class="project__links" href="pages/digital/dailysketch.html">Harlem River Greenway</a></p>
+        <div class="project__image">
+            <img src="data/digital/sketch.png">
+        </div>
+    </div>
+    <br>
+    <div class="project">
+        <p class="project__index">02</p>
+        <p class="project__header"><a class="project__links" href="pages/digital/dailysketch.html">Some Furniture</a></p>
+        <div class="project__image">
+            <img src="data/digital/sketch.png">
+        </div>
+    </div>
+    <br>
 </body>
 </html>
