--- a/digital.html
+++ b/digital.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" type="image/png" href="data/background.svg"/>
+    <link rel="icon" type="image/png" href="data/identity/faviconb.png"/>
     <title>Eddie Joe Antonio</title>
 </head>
 <body>
@@ -24,16 +24,16 @@
 
     <div class="project">
         <p class="project__index">00</p>
-        <p class="project__header"><a class="project__links" href="pages/digital/dailysketch.html">Some Sketches, Digitized</a></p>
+        <p class="project__header"><a class="project__links" href="pages/digital/mesh.html">NYC Mesh: An Exploratory Data Visualization</a></p>
         <div class="project__image">
-            <img src="data/digital/sketch.png">
+            <img src="data/digital/meshviz.gif">
         </div>
     </div>
     <div class="project">
         <p class="project__index">01</p>
-        <p class="project__header"><a class="project__links" href="pages/digital/mesh.html">NYC Mesh: An Exploratory Data Visualization</a></p>
+        <p class="project__header"><a class="project__links" href="pages/digital/dailysketch.html">Some Sketches, Digitized</a></p>
         <div class="project__image">
-            <img src="data/digital/meshviz.gif">
+            <img src="data/digital/sketch.png">
         </div>
     </div>
     <br>
