--- a/research.html
+++ b/research.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" type="image/png" href="data/background.svg"/>
+    <link rel="icon" type="image/png" href="data/identity/faviconb.png"/>
     <title>Eddie Joe Antonio</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
         <p class="project__index">00</p>
         <p class="project__header"><a class="project__links" href="pages/research/migrantsupportsystems.html">Migrant Support Systems: Analyzing Select Destinations of Governor Abbott's Refugee Removal Program</a></p>
         <div class="project__image">
-            <img src="data/research/dc_snippet.png">
+            <a href="pages/research/migrantsupportsystems.html"><img src="data/research/dc_snippet.png"></a>
         </div>
     </div>
     <br>
