--- a/pages/digital/mesh.html
+++ b/pages/digital/mesh.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles.css">
-    <link rel="icon" type="image/png" href="../../data/identity/background.svg"/>
+    <link rel="icon" type="image/png" href="../../data/identity/faviconc.png"/>
     <title>Eddie Joe Antonio</title>
 </head>
 <body>
