content and styles
Added HRG gifs and MPJ images

--- a/digital.html
+++ b/digital.html
@@ -23,14 +23,14 @@
     <a class="links" href="about.html">about</a>
 
     <div class="project">
-        <p class="project__index">00</p>
+        <p class="project__index">0D</p>
         <p class="project__header"><a class="project__links" href="pages/digital/mesh.html">NYC Mesh: An Exploratory Data Visualization</a></p>
         <div class="project__image">
             <img src="data/digital/meshviz.gif">
         </div>
     </div>
     <div class="project">
-        <p class="project__index">01</p>
+        <p class="project__index">1D</p>
         <p class="project__header"><a class="project__links" href="pages/digital/dailysketch.html">Some Sketches, Digitized</a></p>
         <div class="project__image">
             <img src="data/digital/sketch.png">
