--- a/spatial.html
+++ b/spatial.html
@@ -22,26 +22,26 @@
     <a class="links" href="digital.html">digital</a>
     <a class="links" href="about.html">about</a>
     <div class="project">
-        <p class="project__index">00</p>
-        <p class="project__header"><a class="project__links" href="pages/digital/mesh.html">Marsha P. Johnson State Park</a></p>
+        <p class="project__index">0S</p>
+        <p class="project__header"><a class="project__links" href="pages/spatial/greenway.html">Harlem River Greenway Link</a></p>
         <div class="project__image">
-            <img src="data/digital/meshviz.gif">
+            <a href="pages/spatial/greenway.html"><img src="data/spatial/siteplan-walk.gif"></a>
         </div>
     </div>
     <br>
     <div class="project">
-        <p class="project__index">01</p>
-        <p class="project__header"><a class="project__links" href="pages/digital/dailysketch.html">Harlem River Greenway</a></p>
+        <p class="project__index">1S</p>
+        <p class="project__header"><a class="project__links" href="pages/spatial/mpjstatepark.html">Marsha P. Johnson State Park</a></p>
         <div class="project__image">
-            <img src="data/digital/sketch.png">
+            <a href="pages/spatial/mpjstatepark.html"><img src="data/spatial/210430_RENDERED-AERIAL-UPDATED-REDUCED-scaled.jpg"></a>
         </div>
     </div>
     <br>
     <div class="project">
-        <p class="project__index">02</p>
+        <p class="project__index">2S</p>
         <p class="project__header"><a class="project__links" href="pages/digital/dailysketch.html">Some Furniture</a></p>
         <div class="project__image">
-            <img src="data/digital/sketch.png">
+            <a><img src="data/digital/sketch.png"></a>
         </div>
     </div>
     <br>
