--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
 
     <br>
     <div class="project">
-        <p class="project__index">00</p>
+        <p class="project__index">0R</p>
         <p class="project__header"><a class="project__links" href="pages/research/migrantsupportsystems.html">Migrant Support Systems: Analyzing Select Destinations of Governor Abbott's Refugee Removal Program</a></p>
         <div class="project__image">
             <a href="pages/research/migrantsupportsystems.html"><img src="data/research/dc_snippet.png"></a>
@@ -32,7 +32,7 @@
     </div>
     <br>
     <div class="project">
-        <p class="project__index">01</p>
+        <p class="project__index">1R</p>
         <p class="project__header"><a class="project__links" href="pages/research/grasshopperparametric.html">Voter-Driven Parametric Design</a></p>
         <div class="project__image">
             <img src="data/research/312 Evergreen - Design.jpg">
@@ -40,8 +40,8 @@
     </div>
     <br>
     <div class="project">
-        <p class="project__index">02</p>
-        <p class="project__header"><a class="project__links" href="pages/research/buellcenter.html">Buell Center at Columbia University: Morningside</a></p>
+        <p class="project__index">2R</p>
+        <p class="project__header"><a class="project__links" href="pages/research/buellcenter.html">Temple Hoyne Buell Center at Columbia University: Morningside</a></p>
         <div class="project__image">
             <img src="data/research/campus.gif">
         </div>
