--- a/digital.html
+++ b/digital.html
@@ -26,14 +26,14 @@
         <p class="project__index">0D</p>
         <p class="project__header"><a class="project__links" href="pages/digital/mesh.html">NYC Mesh: An Exploratory Data Visualization</a></p>
         <div class="project__image">
-            <img src="data/digital/meshviz.gif">
+            <a href="pages/digital/mesh.html"><img src="data/digital/meshvizb.gif"></a>
         </div>
     </div>
     <div class="project">
         <p class="project__index">1D</p>
         <p class="project__header"><a class="project__links" href="pages/digital/dailysketch.html">Some Sketches, Digitized</a></p>
         <div class="project__image">
-            <img src="data/digital/sketch.png">
+            <a href="pages/digital/dailysketch.html"><img src="data/digital/sketch.png"></a>
         </div>
     </div>
     <br>
