--- a/pages/digital/mesh.html
+++ b/pages/digital/mesh.html
@@ -36,7 +36,7 @@
             The full site can be accessed <a href="https://eddiejoe-antonio.github.io/mesh-viz/">here.</a>
         </p>
         <div class="project__image">
-            <img src="../../data/digital/meshviz.gif">
+            <img src="../../data/digital/meshvizb.gif">
         </div>
     </div>
 </body>
