--- a/spatial.html
+++ b/spatial.html
@@ -25,7 +25,7 @@
         <p class="project__index">0S</p>
         <p class="project__header"><a class="project__links" href="pages/spatial/greenway.html">Harlem River Greenway Link</a></p>
         <div class="project__image">
-            <a href="pages/spatial/greenway.html"><img src="data/spatial/siteplan-walk.gif"></a>
+            <a href="pages/spatial/greenway.html"><img src="data/spatial/hrgrenderings.gif"></a>
         </div>
     </div>
     <br>
@@ -33,15 +33,23 @@
         <p class="project__index">1S</p>
         <p class="project__header"><a class="project__links" href="pages/spatial/mpjstatepark.html">Marsha P. Johnson State Park</a></p>
         <div class="project__image">
-            <a href="pages/spatial/mpjstatepark.html"><img src="data/spatial/210430_RENDERED-AERIAL-UPDATED-REDUCED-scaled.jpg"></a>
+            <a href="pages/spatial/mpjstatepark.html"><img src="data/spatial/210430-Commemoration-Diagram-PLAN.jpg"></a>
         </div>
     </div>
     <br>
     <div class="project">
         <p class="project__index">2S</p>
-        <p class="project__header"><a class="project__links" href="pages/digital/dailysketch.html">Some Furniture</a></p>
+        <p class="project__header"><a class="project__links" href="pages/spatial/andersonpark.html">Anderson Park</a></p>
         <div class="project__image">
-            <a><img src="data/digital/sketch.png"></a>
+            <a href="pages/spatial/andersonpark.html"><img src="data/spatial/andersonpark.gif"></a>
+        </div>
+    </div>
+    <br>
+    <div class="project">
+        <p class="project__index">3S</p>
+        <p class="project__header"><a class="project__links" href="pages/spatial/furniture.html">Some Furniture, Designed and Built</a></p>
+        <div class="project__image">
+            <a href="pages/spatial/furniture.html"><img src="data/spatial/IMG_2337.jpeg"></a>
         </div>
     </div>
     <br>
