--- a/pages/spatial/greenway.html
+++ b/pages/spatial/greenway.html
@@ -26,11 +26,10 @@
     <div class="project">
         <p class="project__index">0S</p>
         <p class="project__header">Harlem River Greenway Link</p>
-        <p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
+        <p class="project__text">As a landscape designer at Starr Whitehouse, I worked on detailed modeling, visualizations, and construction documentation for the Harlem River Greenway Link. A transformative project situated in a complicated infrastructural zone in East Harlem, the park will stitch together components of the Manhattan Greenway and allow cyclists to connect to a variety of destinations.
+            <br> 
+            <br>
+            Along its 4,000 linear foot length, the project navigates overpasses, bridges, subway tunnels, and other infrastructural obstacles. I modeled the entire 7 acre park and much of its urban context–including five Harlem River bridges–to generate dozens of renderings. These images, both explanatory and descriptive, assisted in client, community board, and internal presentations and contributed to design drawing development. 
             <br>
             <br>
             Read the award announcement <a href="https://www.aiany.org/architecture/featured-projects/view/manhattan-greenway-harlem-river/#:~:text=Located%20between%20125th%20and%20132nd,fishing%2C%20grilling%2C%20and%20performance.">here.</a>
