--- a/research.html
+++ b/research.html
@@ -35,7 +35,7 @@
         <p class="project__index">1R</p>
         <p class="project__header"><a class="project__links" href="pages/research/grasshopperparametric.html">Voter-Driven Parametric Design</a></p>
         <div class="project__image">
-            <img src="data/research/312 Evergreen - Design.jpg">
+            <a href="pages/research/grasshopperparametric.html"><img src="data/research/312 Evergreen - Design.jpg"></a>
         </div>
     </div>
     <br>
@@ -43,7 +43,7 @@
         <p class="project__index">2R</p>
         <p class="project__header"><a class="project__links" href="pages/research/buellcenter.html">Temple Hoyne Buell Center at Columbia University: Morningside</a></p>
         <div class="project__image">
-            <img src="data/research/campus.gif">
+            <a href="pages/research/buellcenter.html"><img src="data/research/campus.gif"></a>
         </div>
     </div>
     <br>
