updated index numbers

--- a/pages/research/buellcenter.html
+++ b/pages/research/buellcenter.html
@@ -24,7 +24,7 @@
     
     <br>
     <div class="project">
-        <p class="project__index">02</p>
+        <p class="project__index">2R</p>
         <p class="project__header">Temple Hoyne Buell Center at Columbia University: Morningside</p>
         <p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
             This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
