--- a/pages/research/grasshopperparametric.html
+++ b/pages/research/grasshopperparametric.html
@@ -24,8 +24,8 @@
     
     <br>
     <div class="project">
-        <p class="project__index">01</p>
-        <p class="project__header">Voter-Driven Parametric Design: Using Grasshopper to Build Consensus</p>
+        <p class="project__index">1R</p>
+        <p class="project__header">Voter-Driven Parametric Design</p>
         <p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
             This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
             This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
