--- a/pages/digital/mesh.html
+++ b/pages/digital/mesh.html
@@ -24,7 +24,7 @@
     
     <br>
     <div class="project">
-        <p class="project__index">00</p>
+        <p class="project__index">0D</p>
         <p class="project__header">NYC Mesh: An Exploratory Data Visualization</p>
         <p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
             This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
