--- a/pages/research/migrantsupportsystems.html
+++ b/pages/research/migrantsupportsystems.html
@@ -24,7 +24,7 @@
     
     <br>
     <div class="project">
-        <p class="project__index">00</p>
+        <p class="project__index">0R</p>
         <p class="project__header">Migrant Support Systems: Analyzing Select Destinations of Governor Abbott's Refugee Removal Program</p>
         <p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
             This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
