--- a/pages/spatial/mpjstatepark.html
+++ b/pages/spatial/mpjstatepark.html
@@ -24,7 +24,7 @@
     
     <br>
     <div class="project">
-        <p class="project__index">01</p>
+        <p class="project__index">1S</p>
         <p class="project__header">Marsha P. Johnson State Park</p>
         <p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
             This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
