--- a/pages/research/grasshopperparametric.html
+++ b/pages/research/grasshopperparametric.html
@@ -33,7 +33,7 @@
             This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
             <br>
             <br>
-            Read the full report <a href="../../data/research/files/AntonioLu_GIS Final Report.pdf">here.</a>
+            Read the full report <a href="https://artifact-essay-eddiejoe.glitch.me/">here.</a>
         </p>
         <div class="project__image">
             <img src="../../data/research/312 Evergreen - Design.jpg">
