--- a/pages/research/grasshopperparametric.html
+++ b/pages/research/grasshopperparametric.html
@@ -36,7 +36,7 @@
             Read the full report <a href="https://artifact-essay-eddiejoe.glitch.me/">here.</a>
         </p>
         <div class="project__image">
-            <img src="../../data/research/312 Evergreen - Design.jpg">
+            <img src="../../data/research/8-part-gif">
         </div>
     </div>
 </body>
