--- a/research.html
+++ b/research.html
@@ -35,7 +35,7 @@
         <p class="project__index">1R</p>
         <p class="project__header"><a class="project__links" href="pages/research/grasshopperparametric.html">Voter-Driven Parametric Design</a></p>
         <div class="project__image">
-            <a href="pages/research/grasshopperparametric.html"><img src="data/research/312 Evergreen - Design.jpg"></a>
+            <a href="pages/research/grasshopperparametric.html"><img src="data/research/8-part-gif"></a>
         </div>
     </div>
     <br>
