--- a/digital.html
+++ b/digital.html
@@ -31,11 +31,20 @@
     </div>
     <div class="project">
         <p class="project__index">1D</p>
+        <p class="project__header"><a class="project__links" href="pages/digital/responsivesignage.html">Dynamic Displays: Historic Signs of Coney Island for the Coney Island-Bound Traveler</a></p>
+        <div class="project__image">
+            <a href="pages/digital/responsivesignage.html"><img src="data/digital/responsivearch.gif"></a>
+        </div>
+    </div>
+    <br>
+    <div class="project">
+        <p class="project__index">2D</p>
         <p class="project__header"><a class="project__links" href="pages/digital/dailysketch.html">Some Sketches, Digitized</a></p>
         <div class="project__image">
             <a href="pages/digital/dailysketch.html"><img src="data/digital/sketch.png"></a>
         </div>
     </div>
     <br>
+
 </body>
 </html>
