--- a/pages/digital/dailysketch.html
+++ b/pages/digital/dailysketch.html
@@ -26,11 +26,8 @@
     <div class="project">
         <p class="project__index">2D</p>
         <p class="project__header">Some Sketches, Digitized</p>
-        <p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
+        <p class="project__text">
+            A personal project, these sketches are daily reflections. They document explorations, observations, and memories in a quick visual way. I built a simple gallery to view and share a selection of these images, and added a fun tool for filtering based on color. 
             <br>
             <br>
             Explore the full set of images <a href="https://eddiejoe-antonio.github.io/dailysketch-viz/">here.</a>
