--- a/pages/research/grasshopperparametric.html
+++ b/pages/research/grasshopperparametric.html
@@ -26,11 +26,7 @@
     <div class="project">
         <p class="project__index">1R</p>
         <p class="project__header">Voter-Driven Parametric Design</p>
-        <p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
+        <p class="project__text">In this experimental project, I explored how Grasshopper could be used as a tool for voter-driven outreach on spatial projects. The “traditional” outreach configuration often involves static meetings with participants speaking one by one, in unison, or in discord. While often a consensus opinion is clear, it is sometimes the loudest or most persistent voices that get their thoughts documented and incorporated into a design. This project attempted to propose an alternative model, where all participants in an outreach process submitted their spatial preferences for the project on a website. Their responses then generated a parametrically-driven design that quantified public opinion and used it to create spaces in ideal climatic zones of the site. 
             <br>
             <br>
             Read the full report <a href="https://artifact-essay-eddiejoe.glitch.me/">here.</a>
