--- a/pages/research/migrantsupportsystems.html
+++ b/pages/research/migrantsupportsystems.html
@@ -26,14 +26,13 @@
     <div class="project">
         <p class="project__index">0R</p>
         <p class="project__header">Migrant Support Systems: Analyzing Select Destinations of Governor Abbott's Refugee Removal Program</p>
-        <p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
+        <p class="project__text">This report utilizes spatial analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022. Together with my project partner Hsiang Hsi Lu, we developed “refugee support system score” to rate New York City’s Port Authority Bus Terminal, Washington D.C.’s Home of the Vice President, and Martha’s Vineyard’s International Airport as viable alternatives for the housing, supporting, and processing of refugees against a control case of El Paso, Texas. The datasets used to generate this score were sourced from the American Community Survey, the decennial Census, the Department of Homeland Security, and generated from GoogleMaps through a custom, Python-driven data collection process. 
             <br>
             <br>
-            Read the full report <a href="../../data/research/files/AntonioLu_GIS Final Report.pdf">here.</a>
+            Our report highlights that the alternative destinations for refugees were not superior options to an established refugee destination such as El Paso, Texas. Greater local language affinities to a majority of undocumented arrivals  and a more robust ecosystem of shelters, free clinics, and immigration courts suggested that the Texas bordertown might be a better place to house, support, and process recent arrivals to this country. 
+            <br>
+            <br>
+            Read the full report <a href="../../data/research/files/AntonioLu_GIS Final Report.pdf">here</a> for greater detail on the study. 
         </p>
         <div class="project__image">
             <img src="../../data/research/dc_snippet.png">
