--- a/pages/spatial/andersonpark.html
+++ b/pages/spatial/andersonpark.html
@@ -26,15 +26,15 @@
     <div class="project">
         <p class="project__index">2S</p>
         <p class="project__header">Anderson Park</p>
-        <p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
+        <p class="project__text">As part of a collaborative team at Starr Whitehouse, I rendered a series of illustrative site plans for a new urban plaza in New Rochelle. Part of a larger transit-oriented development, the public space allows for temporary pedestrianizing and is intended to be a site for performances, food markets, and other urban festivities. The plaza stitches together nearby commercial establishments and other civic spaces and is one of a number of local initiatives to invigorate the city’s downtown. 
             <br>
             <br>
-            Read the award announcement <a href="https://www.aiany.org/architecture/featured-projects/view/manhattan-greenway-harlem-river/#:~:text=Located%20between%20125th%20and%20132nd,fishing%2C%20grilling%2C%20and%20performance.">here.</a>
+            I also conducted a detailed embodied carbon assessment on the project utilizing a custom Grasshopper script. The script takes volume totals by material and converts these to embodied carbon using industry coefficients. Prototyped on this project, the goal of this tool is to advance a more sustainable design from an earlier stage of design development. 
+            <br>
+            <br>
+            Read more about Anderson Plaza <a href="https://rew-online.com/new-rochelle-breaks-ground-on-4m-transformation-of-downtown-plaza/">here.</a> 
         </p>
+
         <div class="project__image">
             <img src="../../data/spatial/andersonpark.gif">
         </div>
