--- a/pages/spatial/mpjstatepark.html
+++ b/pages/spatial/mpjstatepark.html
@@ -26,14 +26,10 @@
     <div class="project">
         <p class="project__index">1S</p>
         <p class="project__header">Marsha P. Johnson State Park</p>
-        <p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
+        <p class="project__text">Over a 3 month period, I participated in a series of both virtual and in-person outreach sessions guiding the renovation of Marsha P. Johnson State Park. I facilitated breakout groups, conducted Spanish-language interviews with park users, and helped develop illustrative, planting, and grading plans. I modeled the park redesign through multiple iterations and created perspectival and aerial renderings for public comment, both at outreach meetings and on the NYS Parks website.
             <br>
             <br>
-            Read the award announcement <a href="https://www.aiany.org/architecture/featured-projects/view/manhattan-greenway-harlem-river/#:~:text=Located%20between%20125th%20and%20132nd,fishing%2C%20grilling%2C%20and%20performance.">here.</a>
+            The outreach process surrounding this project was profiled <a href="https://architizer.com/blog/inspiration/stories/acclaimed-redesign-state-park-community-led-design/">here</a>. 
         </p>
         <div class="project__image">
             <img src="../../data/spatial/210430_RENDERED-AERIAL-UPDATED-REDUCED-scaled.jpg">
