--- a/pages/digital/responsivesignage.html
+++ b/pages/digital/responsivesignage.html
@@ -24,14 +24,13 @@
     <div class="project">
         <p class="project__index">1D</p>
         <p class="project__header">Dynamic Displays: Historic Signs of Coney Island for the Coney Island-Bound Traveler</p>
-        <p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
+        <p class="project__text">Through a dynamically-triggered projection, this project attempts to connect Brooklyn transit-users to the iconic imagery of their city. Whenever an outward-bound D train passes this installation, a dynamic light display turns on and showcases the historic neon signs of Coney Island. Pulling the arrival times from the MTA’s feed, a smart plug is triggered through an IFTT script whenever a train is passing, powering a projector and displaying the images. 
             <br>
             <br>
-            The full video can be viewed <a href="https://youtu.be/PVHHxMUgq4Q">here.</a>
+            Riders are reminded of their destinations and connected to the history of amusement, entertainment, and seaside activity that brought trains to that destination in the first place. The project also asks if signage can be dynamically triggered, suggesting an application of urban tech along transit paths. 
+            <br>
+            <br>
+            A full video of the project can be viewed <a href="https://youtu.be/PVHHxMUgq4Q">here.</a>
         </p>
         <div class="project__image">
             <img src="../../data/digital/responsivearch.gif">
