--- a/pages/research/buellcenter.html
+++ b/pages/research/buellcenter.html
@@ -26,14 +26,10 @@
     <div class="project">
         <p class="project__index">2R</p>
         <p class="project__header">Temple Hoyne Buell Center at Columbia University: Morningside</p>
-        <p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
+        <p class="project__text">As part of a larger initiative to interrogate land in the Americas, I have developed historical sections of the site of the Buell Center. Illustrating conditions back to the early 1600s, the sections are detailed conceptual drawings that highlight the constraining, leveling, and manipulating of land in the heart of Morningside Heights. Primary sources included survey information from Columbia’s Butler Archives, McKim Mead and White drawings from the Avery Archives, historical maps of Manhattan, and etchings of the Bloomingdale Insane Asylum.
             <br>
             <br>
-            Read the full report <a href="../../data/research/files/AntonioLu_GIS Final Report.pdf">here.</a>
+            The drawings will feature in an upcoming exhibition display at the <a href="https://buellcenter.columbia.edu/">Buell Center</a> itself. 
         </p>
         <div class="project__image">
             <img src="../../data/research/campus.gif">
