--- a/pages/spatial/furniture.html
+++ b/pages/spatial/furniture.html
@@ -26,14 +26,10 @@
     <div class="project">
         <p class="project__index">3S</p>
         <p class="project__header">Some Furniture, Designed and Built</p>
-        <p class="project__text">This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
-            This report utilizes GIS-driven analysis to critique Governor Abbott's refugee removal program of the late summer and early fall of 2022.
+        <p class="project__text">I have designed, built, and assembled furniture for personal, academic, and commercial use. I began this interest at the <a href="https://berkeley.yalecollege.yale.edu/student-life/berkeley-woodshop">Berkeley College Woodshop</a> at Yale University, where I built my first coffee table. I then spent a year apprenticing as a furniture designer at <a href="https://gloriacortina.com/">Gloria Cortina Studio</a> in Mexico City, where I spent time both in a traditional design office and in the workshops of artisans around the city. While working with Gloria Cortina, I helped develop an archive of digital models, sections, detailed plans, and other drawings of their commonly sold pieces. I also assisted in the design of an exhibit at <a href="https://www.architecturaldigest.com/story/8-salon-art-design-2019-standouts">Salon 2019</a> in New York’s Park Avenue Armory. 
             <br>
             <br>
-            Read the award announcement <a href="https://www.aiany.org/architecture/featured-projects/view/manhattan-greenway-harlem-river/#:~:text=Located%20between%20125th%20and%20132nd,fishing%2C%20grilling%2C%20and%20performance.">here.</a>
+            I have since built much of my personal furniture for my living space and supported a friend who developed an Etsy business with some part-time woodworking.             
         </p>
         <div class="project__image">
             <img src="../../data/spatial/IMG_2337.jpeg">
